Theme Search: Fix search box alignment

--- a/themes/wporg-5ftf/css/components/_search-form.scss
+++ b/themes/wporg-5ftf/css/components/_search-form.scss
@@ -8,7 +8,7 @@
 		background: $color-gray-light-100;
 
 		.search-field {
-			flex: 0 1 auto;
+			flex: 1 1 auto;
 			margin: 0;
 			padding: 0.8em 1em;
 			background: transparent;
